refactor: change the image files path to relative path

--- a/文老师/基础/1.md
+++ b/文老师/基础/1.md
@@ -4,8 +4,7 @@
 下篇 - 12-20章 架构设计+论文
 
 
-
-## 删除的内容：
+## 删除的内容
 
 不必学：
 
@@ -14,7 +13,6 @@
 稍微得知道一些：
 
 UML建模、面向构建的软件设计、构建平台与典型架构
-
 
 
 考试要求
@@ -31,19 +29,15 @@ UML建模、面向构建的软件设计、构建平台与典型架构
 10. 英文
 
 
-
-
-
 ## 新老版本章节对比
 
-![QQ_1741272836096](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/1-assets/QQ_1741272836096.png)
+![QQ_1741272836096](./assets/1-assets/QQ_1741272836096.png)
 
-![QQ_1741273198822](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/1-assets/QQ_1741273198822.png)
+![QQ_1741273198822](./assets/1-assets/QQ_1741273198822.png)
 
-![QQ_1741273694152](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/1-assets/QQ_1741273694152.png)
+![QQ_1741273694152](./assets/1-assets/QQ_1741273694152.png)
 
-![QQ_1741273787965](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/1-assets/QQ_1741273787965.png)
-
+![QQ_1741273787965](./assets/1-assets/QQ_1741273787965.png)
 
 
 **架构侧重点所在章节：**
@@ -51,13 +45,11 @@ UML建模、面向构建的软件设计、构建平台与典型架构
 12章、13章、14章、15章。其次18、19章节。16、17大概率不考
 
 
+![QQ_1741274542428](./assets/1-assets/QQ_1741274542428.png)
 
-![QQ_1741274542428](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/1-assets/QQ_1741274542428.png)
-
-![QQ_1741274599073](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/1-assets/QQ_1741274599073.png)
-
+![QQ_1741274599073](./assets/1-assets/QQ_1741274599073.png)
 
 
 **学习重点**：如果时间来不及，那么 - 黑色全学；红色学习划线部分
 
-![QQ_1741275140665](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/1-assets/QQ_1741275140665.png)
+![QQ_1741275140665](./assets/1-assets/QQ_1741275140665.png)
