--- a/文老师/基础/10.md
+++ b/文老师/基础/10.md
@@ -4,8 +4,7 @@
 >
 > 另外，如果考起来，很容易**超纲**，小心！当然基本都会超纲，防不住，尽力局吧
 
-![image-20250331222645115](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250331222645115.png)
-
+![image-20250331222645115](./assets/image-20250331222645115.png)
 
 
 1. 微处理器
@@ -16,37 +15,32 @@
 6. 软件开发
 
 
-
 ## 1. 嵌入式微处理
 
 ### 体系结构（微处理器）
 
->  从 `ARM 9` 开始，用哈佛结构。之前比如 `ARM 7系列` 都是用冯诺伊曼结构
+> 从 `ARM 9` 开始，用哈佛结构。之前比如 `ARM 7系列` 都是用冯诺伊曼结构
 >
 > 不过，现代ARM处理器，往往采用混合结构，把哈佛的优点（指令和数据拥有了独立的缓存）和冯诺伊曼的优点结合起来
 
 - 是一种存储器结构
 
-![image-20250331223658049](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250331223658049.png)
+![image-20250331223658049](./assets/image-20250331223658049.png)
 
-![image-20250331223826677](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250331223826677.png)
+![image-20250331223826677](./assets/image-20250331223826677.png)
 
 - 冯诺伊曼，共用同一套总线，所以是串行的
 - 哈佛结构，是一种 并行体系结构，因为有两套存储器，所以 可以同时取指令（取指）和取数据 - 注意：伪同时
 
 
-
-![image-20250331224227673](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250331224227673.png)
+![image-20250331224227673](./assets/image-20250331224227673.png)
 
 - 上面指的是 嵌入式处理器（类似CPU）的分类
 - **考点是**  根据用途分类！ - MCU、MPU、DSP、SOC
 
-![image-20250331224633109](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250331224633109.png)
+![image-20250331224633109](./assets/image-20250331224633109.png)
 
 - MPU的处理器 - 32位 和 64位
-
-
-
 
 
 ## 2. 多核处理器
@@ -55,133 +49,108 @@
 >
 > 多线程不一定是多核，单线程也是通过 时间片调度算法（10ns） 模拟的多线程并发（伪）；多核是真正的多线程
 
-![image-20250331225500938](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250331225500938.png)
+![image-20250331225500938](./assets/image-20250331225500938.png)
 
 - SMP vs AMP ： S - 对称； A - async异步； 还有个BMP - 就是混合调度技术
 - 全局队列就是俗称的CPU多核跑分；局部队列就是俗称的 CPU单核跑分
 - 嵌入式内，软硬件是紧密联系的 - 影响技术选型
 
 
-
 下面的真题，尽量记住
 
-![image-20250331230003441](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250331230003441.png)
-
+![image-20250331230003441](./assets/image-20250331230003441.png)
 
 
 ## 3. 嵌入式软件
 
-![image-20250331230305739](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250331230305739.png)
+![image-20250331230305739](./assets/image-20250331230305739.png)
 
 - 固化存储 - 最终是要烧进去的
 
 
-
-![image-20250401210718779](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250401210718779.png)
+![image-20250401210718779](./assets/image-20250401210718779.png)
 
 - 板级支持包BSP  属于 `设备驱动层`，偏底层； 板级就是开发板，板上的所有硬件都是板级
-- BootLoader - 硬件初始化和操作系统初始化；执行时屏蔽硬件细节； 类似windows的 `BIOS` 
-
-
-
+- BootLoader - 硬件初始化和操作系统初始化；执行时屏蔽硬件细节； 类似windows的 `BIOS`
 
 
 ### BootLoader
 
-![image-20250401211038259](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250401211038259.png)
+![image-20250401211038259](./assets/image-20250401211038259.png)
 
 `步骤顺序记一下`，不要记错：片级初始化 -> 板级初始化 -> 系统及初始化
 
 
-
 ### 设备驱动程序
 
-![image-20250401211237996](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250401211237996.png)
+![image-20250401211237996](./assets/image-20250401211237996.png)
 
 了解即可
-
-
-
 
 
 ## 4. 嵌入式系统
 
 > 嵌入式系统是完整的一个嵌入式设备，包含软硬件和操作系统
 
-![image-20250401211534637](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250401211534637.png)
-
+![image-20250401211534637](./assets/image-20250401211534637.png)
 
 
 ### 特性
 
-![image-20250401211806729](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250401211806729.png)
+![image-20250401211806729](./assets/image-20250401211806729.png)
 
 安全、可靠、实时
 
 
-
 ### 分类
 
-![image-20250401212043766](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250401212043766.png)
+![image-20250401212043766](./assets/image-20250401212043766.png)
 
 抽象层就是驱动层。 分类了解即可
-
-
-
 
 
 ### 嵌入式数据库系统
 
 > EDBSM - embeded database system manager
 
-![image-20250401212342560](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250401212342560.png)
+![image-20250401212342560](./assets/image-20250401212342560.png)
 
 
-
-![image-20250401212528109](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250401212528109.png)
+![image-20250401212528109](./assets/image-20250401212528109.png)
 
 本地的数据库叫 `嵌入式数据库`，类似localStorage； 远程数据库叫 `主数据库`
 
 
-
-
-
-### 嵌入式操作系统 EOS 
+### 嵌入式操作系统 EOS
 
 > embeded OS
 >
 > linux 也是嵌入式操作系统，它是个例外 - 很大，因为它非要执行图形可视化。图形视频是最占用资源的
 
-![image-20250401212826391](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250401212826391.png)
+![image-20250401212826391](./assets/image-20250401212826391.png)
 
 可裁剪，就是即使硬件支持图形，但是我们不需要，就不加入这个功能（裁剪掉） - 其他各种操作系统也需要是可裁剪的
-
-
-
 
 
 ## 5. 嵌入式实时操作系统 - RTOS
 
 > Real time OS
 >
-> 相比操作系统，更进一步的强调了 实时性； 
+> 相比操作系统，更进一步的强调了 实时性；
 >
 > 最重要的两个特点：及时响应；高准确性
 
-![image-20250401213604541](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250401213604541.png)
-
+![image-20250401213604541](./assets/image-20250401213604541.png)
 
 
 ### RTOS三大特征
 
-![image-20250401213840369](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250401213840369.png)
-
+![image-20250401213840369](./assets/image-20250401213840369.png)
 
 
 注意： **所有系统，都是`软硬件紧密相结合`的，都是可以 `对软件and硬件` 进行结构和功能上的配置/裁剪！ 无论是总系统还是操作系统**
 
-![image-20250401214507312](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250401214507312.png)
-
+![image-20250401214507312](./assets/image-20250401214507312.png)
 
 
 ## 6. 嵌入式上的 软件开发
@@ -193,21 +162,19 @@
 - 因为目标机 一般内存极小、资源受限、硬件能力也受限，所以难以集成IDE且开发。 目标机一般是DOS、命令行的形式
 - 一般linux系统上开发，因为windows上有垄断，可能会开发受限
 
-![image-20250401215320088](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250401215320088.png)
+![image-20250401215320088](./assets/image-20250401215320088.png)
 
 - 两个机器之间，需要建立 **真实的物理连接**
 
 
-
 ### 交叉编译 and 交叉调试
 
-![image-20250401215514447](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250401215514447.png)
+![image-20250401215514447](./assets/image-20250401215514447.png)
 
 交叉编译 - 交叉编译链； 交叉调试 - 借助仿真器
 
 
-
 ### 开发工具 - 了解即可
 
-![image-20250401215817784](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250401215817784.png)
+![image-20250401215817784](./assets/image-20250401215817784.png)
 
