--- a/文老师/基础/11.md
+++ b/文老师/基础/11.md
@@ -4,13 +4,13 @@
 2. 局域网
 3. TCP/IP 协议族
 
-![image-20250401220236513](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250401220236513.png)
+![image-20250401220236513](./assets/image-20250401220236513.png)
 
 
 
 ## pre. 网络功能和分类
 
- ![image-20250401223141547](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250401223141547.png)
+ ![image-20250401223141547](./assets/image-20250401223141547.png)
 
 `LAN` - **Local Area Network** ； `MAN` - Metropolitan(大都市) ； `WAN` - Wide
 
@@ -18,7 +18,7 @@
 
 ###  相关有线连接的拓扑图 （拓扑 - Topology）
 
-![image-20250401223624763](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250401223624763.png)
+![image-20250401223624763](./assets/image-20250401223624763.png)
 
 - 总线型 - 同一时间只能有一个终端在发送（串行、有点类似外设进程哦）
 
@@ -27,7 +27,7 @@
 
 
 
-![image-20250401224518926](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250401224518926.png)
+![image-20250401224518926](./assets/image-20250401224518926.png)
 
 
 
@@ -37,7 +37,7 @@
 
 > 重点，基本要背下来
 
-![image-20250401225434463](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250401225434463.png)
+![image-20250401225434463](./assets/image-20250401225434463.png)
 
 - 单位和设备，要记下来。协议从网络层开始记就可以了
 - 集线器： Hub，也就是多合一等外设转接头
@@ -49,7 +49,7 @@
 
 ### 局域网和广域网协议
 
-![image-20250401230301816](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250401230301816.png)
+![image-20250401230301816](./assets/image-20250401230301816.png)
 
 - 局域网 - 也叫以太网；广域网 - 典型代表是因特网； 他们处于 **数据链路层**
 
@@ -65,7 +65,7 @@
 
 ### TCP/IP 协议族
 
-![image-20250401230955335](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250401230955335.png)
+![image-20250401230955335](./assets/image-20250401230955335.png)
 
 一般网络实际使用 TCP四层模型。OSI七层模型是理论上的； 其实还有OSI五层模型（把表示层和会话层干掉）-最常研究的
 
@@ -75,7 +75,7 @@
 
 >  下面的协议，英文名和中文名要记住，考点！
 
-![image-20250402205359970](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250402205359970.png)
+![image-20250402205359970](./assets/image-20250402205359970.png)
 
 - `IP` - Internet Protocol ; `TCP` - Transmission Control Protocol； `UDP` - User Datagram Protocol
 - `ARP` - Address Resolution Protocol； `RARP` - Reverse xxx
@@ -85,20 +85,20 @@
 
 
 
-![image-20250402210125607](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250402210125607.png)
+![image-20250402210125607](./assets/image-20250402210125607.png)
 
 - TCP协议： FTP、HTTP、SMTP、POP3、Telnet
 - UDP协议：TFTP、SNMP、DHCP、DNS
 
 
 
-![image-20250402210404386](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250402210404386.png)
+![image-20250402210404386](./assets/image-20250402210404386.png)
 
 
 
 ### 交换技术
 
-![image-20250402211151131](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250402211151131.png)
+![image-20250402211151131](./assets/image-20250402211151131.png)
 
 - 维护一个`mac地址（物理地址）和端口号`的映射/map表。自主学习的，也就是连接一个设备就记录一下映射
 - 交换机隔离 冲突域
@@ -107,7 +107,7 @@
 
 ### 路由技术
 
-![image-20250402211746718](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250402211746718.png)
+![image-20250402211746718](./assets/image-20250402211746718.png)
 
 - 维护一个路由表，`IP地址和端口号`的映射，也是自主学习的
 
