--- a/文老师/基础/12.md
+++ b/文老师/基础/12.md
@@ -13,11 +13,11 @@
 
 ### 网线
 
-![image-20250402212113967](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250402212113967.png)
+![image-20250402212113967](./assets/image-20250402212113967.png)
 
 
 
-![image-20250402212302029](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250402212302029.png)
+![image-20250402212302029](./assets/image-20250402212302029.png)
 
 - 所以，网线有8根铜线。 RJ-45水晶头
 - 网线传递电信号；光纤传输光信号
@@ -26,29 +26,29 @@
 
 ### 光纤
 
-![image-20250402230742709](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250402230742709.png)
+![image-20250402230742709](./assets/image-20250402230742709.png)
 
 - MMF - multi ； SMF - single
 
-![image-20250402230803924](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250402230803924.png)
+![image-20250402230803924](./assets/image-20250402230803924.png)
 
 
 
 ## 5. 通信方式和交换方式
 
-![image-20250402230841633](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250402230841633.png)
+![image-20250402230841633](./assets/image-20250402230841633.png)
 
 - 工就是工作（方向）。双工就是双工作方向
 
 
 
-![image-20250402231217710](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250402231217710.png)
+![image-20250402231217710](./assets/image-20250402231217710.png)
 
 - 同步方式，相当于首先建立一个连接（同步帧），不需要额外在每个字段都`加上起始位和停止位`
 
 
 
-![image-20250403210815511](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250403210815511.png)
+![image-20250403210815511](./assets/image-20250403210815511.png)
 
 - 交换方式 - 比较重要了
 - 存储转发 - 中间经过的每一个节点，都会保存一下报文，保证`局部报文的`完整性和正确性（有头有尾）再转发
@@ -57,13 +57,13 @@
 
 真题两道
 
-![image-20250403211045601](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250403211045601.png)
+![image-20250403211045601](./assets/image-20250403211045601.png)
 
 
 
 ## 6. IP地址表示
 
-![image-20250403211327206](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250403211327206.png)
+![image-20250403211327206](./assets/image-20250403211327206.png)
 
 - 建议：把 2的10次方 的数字都给记一下，快速记住第一个点前面的十进制值是多少
 
@@ -71,7 +71,7 @@
 
 ### IP地址分类 - 重要 - 全要记住
 
-![image-20250403211850557](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250403211850557.png)
+![image-20250403211850557](./assets/image-20250403211850557.png)
 
 - ABC 类 是主要考点； ABC类是`单播地址`；D类是 `组播地址`；E类为`保留地址`
 
@@ -83,7 +83,7 @@
 
 
 
-![image-20250403212959852](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250403212959852.png)
+![image-20250403212959852](./assets/image-20250403212959852.png)
 
 - 无分类编址没懂？ 网络号位数作用：IPv4地址固定32位主机号就是`32 - n`，比如12位，此时可以支持`2^12`个机器地址
 
@@ -96,7 +96,7 @@
 
 ## 7. 子网划分
 
-![image-20250403214203686](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250403214203686.png)
+![image-20250403214203686](./assets/image-20250403214203686.png)
 
 - 需要的子网数量计算： 要求：`2^N - 2 > 目标的主机数量比如30个`； N 大于等于 5; 5就是主机位，`32-5 = 27` -> 27 就是我们的网络位，也就是 ip/网络号 后面这个网络号（网络位）
 - 一个C位地址是24位，所以子网号就是 27 - 24 = 3位； 所以划分成了 `2^3` 个子网（子网数量不需要 -2），每个子网 可以最多有 `2^5`个主机
@@ -110,7 +110,7 @@
 
 
 
-![image-20250403221108894](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250403221108894.png)
+![image-20250403221108894](./assets/image-20250403221108894.png)
 
 - 真题，要背一下，和上面讲的对应上了。
 - 第二题：C类子网的网络号是24位（别问为什么，看上面ip地址那张图，下划线划了8位数字，要背住的），20 -> 24位，则有 2^4 个 子网
