--- a/文老师/基础/13.md
+++ b/文老师/基础/13.md
@@ -11,9 +11,9 @@
 
 >  19年底时，IPv4 地址用完了。相比于IPv4 的 32位，IPv6 为 128位
 
-![image-20250404170105939](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250404170105939.png)
+![image-20250404170105939](./assets/image-20250404170105939.png)
 
-![image-20250404170236327](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250404170236327.png)
+![image-20250404170236327](./assets/image-20250404170236327.png)
 
 过渡的三种技术：
 
@@ -27,7 +27,7 @@
 
 ## 9. 网络规划与设计
 
-![image-20250404170544298](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250404170544298.png)
+![image-20250404170544298](./assets/image-20250404170544298.png)
 
 - 核心层 -  **只** 负责高速数据转发
 - 汇聚层 - 承上启下的作用，提供中间的一系列协议
@@ -43,7 +43,7 @@
 
 
 
-![image-20250404225938805](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250404225938805.png)
+![image-20250404225938805](./assets/image-20250404225938805.png)
 
 - 每一层都有一个设备间子系统，俗称`机房`
 
@@ -55,28 +55,28 @@
 
 ### RAID - 廉价磁盘冗余阵列（旧称） - 磁盘冗余阵列技术（新名称）
 
-![image-20250404230631444](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250404230631444.png)
+![image-20250404230631444](./assets/image-20250404230631444.png)
 
 - 冗余存储 - 为了可靠性
 
 
 
-![image-20250404230928322](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250404230928322.png)
+![image-20250404230928322](./assets/image-20250404230928322.png)
 
 - RAID5 - A(p) 等就是校验码，存储在不同的磁盘，但是综合起来就知识一个磁盘
 - RADI5 - 磁盘利用率是 (n-1)/n； 允许最多一个磁盘损坏
 
 
 
-![image-20250404231034296](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250404231034296.png)
+![image-20250404231034296](./assets/image-20250404231034296.png)
 
 
 
 ### 网络存储技术
 
-![image-20250404231428737](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250404231428737.png)
+![image-20250404231428737](./assets/image-20250404231428737.png)
 
-![image-20250404231720181](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250404231720181.png)
+![image-20250404231720181](./assets/image-20250404231720181.png)
 
 
 
@@ -93,14 +93,14 @@
 
 ## 11. 补充考点
 
-![image-20250404232700034](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250404232700034.png)
+![image-20250404232700034](./assets/image-20250404232700034.png)
 
 - NAT - 局域网的公有地址只有一到两个，然后10个机器（10个私用地址）共用这两个公有地址
 - 一个VLan就是一个广播域
 
 
 
-![image-20250404232955806](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250404232955806.png)
+![image-20250404232955806](./assets/image-20250404232955806.png)
 
 - 冲突域和广播域是重点。
 - 同属于一个物理层，就是冲突域
@@ -108,6 +108,6 @@
 
 
 
-![image-20250404233334304](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250404233334304.png)
+![image-20250404233334304](./assets/image-20250404233334304.png)
 
 - www提供万维网服务（也可以称之为主机名）；mail提供邮件服务，等
