--- a/文老师/基础/15.md
+++ b/文老师/基础/15.md
@@ -2,20 +2,20 @@
 
 > PS: 阿姆达尔解决方案 - 从没考过
 
-![image-20250407223904243](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250407223904243.png)
+![image-20250407223904243](./assets/image-20250407223904243.png)
 
 
 
 ## 1. 性能指标
 
-![image-20250407224218101](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250407224218101.png)
+![image-20250407224218101](./assets/image-20250407224218101.png)
 
 
 
 - 标红的记一下
 - 对于工程师，是建议好好记住的
 
-![image-20250407224432239](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250407224432239.png)
+![image-20250407224432239](./assets/image-20250407224432239.png)
 
 
 
@@ -23,13 +23,13 @@
 
 ### 下面是需要重点掌握的
 
-![image-20250407224655398](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250407224655398.png)
+![image-20250407224655398](./assets/image-20250407224655398.png)
 
 
 
 ### 考试真题
 
-![image-20250407225306419](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250407225306419.png)
+![image-20250407225306419](./assets/image-20250407225306419.png)
 
 
 
@@ -37,7 +37,7 @@
 
 ## 2. 性能评价方法
 
-![image-20250409064605266](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/image-20250409064605266-4152366.png)
+![image-20250409064605266](./assets/image-20250409064605266-4152366.png)
 
 - 3MIPS  -  三百万条指令/秒
 - 最多且最频繁的那部分程序，叫做`基准测试程序`，不叫`核心程序` - 考点
@@ -46,7 +46,7 @@
 
 ### 基准程序
 
-![image-20250409065230514](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250409065230514.png)
+![image-20250409065230514](./assets/image-20250409065230514.png)
 
 - 需要记住 TPC(事务处理性能委员会) 基准程序中的 `TPC-C/OLTP` ，`TPC-D`， `TPC-E`
 
@@ -56,6 +56,6 @@
 
 ## 3. 阿姆达尔解决方案
 
-![image-20250409065934692](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250409065934692.png)
+![image-20250409065934692](./assets/image-20250409065934692.png)
 
 增强比例 - 有多少比例的硬件增强，而不是指 强化度
