--- a/文老师/基础/19_1.md
+++ b/文老师/基础/19_1.md
@@ -6,7 +6,7 @@
 
 
 
-![image-20250413231202270](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250413231202270.png)
+![image-20250413231202270](./assets/image-20250413231202270.png)
 
 
 
