--- a/文老师/基础/2.md
+++ b/文老师/基础/2.md
@@ -4,7 +4,7 @@
 
 
 
-![QQ_1741275498133](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1741275498133.png)
+![QQ_1741275498133](./assets/QQ_1741275498133.png)
 
 
 
@@ -31,7 +31,7 @@ CPU其他部位有 - 寄存器组（比如64bit，贼小的存储器）、内存
 
 5. 对系统内部和外部的中断（异常）做出响应和处理
 
-![QQ_1741970122082](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1741970122082.png)
+![QQ_1741970122082](./assets/QQ_1741970122082.png)
 
 程序计数器PC - 这个才是存储所有的指令所在的地址，这样方便未来读取地址
 
@@ -47,35 +47,35 @@ CPU其他部位有 - 寄存器组（比如64bit，贼小的存储器）、内存
 
 **没懂**： 奇偶码数原因；
 
-![QQ_1742139971147](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1742139971147.png)
+![QQ_1742139971147](./assets/QQ_1742139971147.png)
 
 ps： **奇偶校验**码距为2的原因：一个校验位+一个错误位置（当有错误的时候用的）
 
 
 
-![QQ_1742140510799](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1742140510799.png)
+![QQ_1742140510799](./assets/QQ_1742140510799.png)
 
 除数为什么是`10011`，因为多项式为 `x^4 +x^1 + 1`，1 就是 `x^0`，最高次方为4，所以有5位，且`倒着`数 - 0次方、1次方、2次方、3次方、4次方，正好 `10011`
 
  **模2运算** - `异或`运算 - 同0异1
 
-![QQ_1742140962962](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1742140962962.png)
+![QQ_1742140962962](./assets/QQ_1742140962962.png)
 
 
 
 ## 2. 指令系统
 
-![QQ_1742222431262](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1742222431262.png)
+![QQ_1742222431262](./assets/QQ_1742222431262.png)
 
 一个操作码 + N个地址码，地址码从`（程序计数器） PC`中取出来
 
 
 
-![QQ_1742222584859](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1742222584859.png)
+![QQ_1742222584859](./assets/QQ_1742222584859.png)
 
 
 
-![QQ_1742222824965](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1742222824965.png)
+![QQ_1742222824965](./assets/QQ_1742222824965.png)
 
 实现方式记一下
 
@@ -85,11 +85,11 @@ CISC - **complex** instruction set computer
 
 RISC - **Reduced** instruction set computer - 减少的、简化的
 
-![QQ_1742223107244](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1742223107244-2223111.png)
+![QQ_1742223107244](./assets/QQ_1742223107244-2223111.png)
 
 
 
-![QQ_1742223259802](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1742223259802.png)
+![QQ_1742223259802](./assets/QQ_1742223259802.png)
 
 如图，流水线，能够取指、分析、执行，各自有各自的构件去执行
 
@@ -97,7 +97,7 @@ RISC - **Reduced** instruction set computer - 减少的、简化的
 
 
 
-![QQ_1742223420089](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1742223420089.png)
+![QQ_1742223420089](./assets/QQ_1742223420089.png)
 
 **这里是计算，是个重点**
 
@@ -107,13 +107,13 @@ RISC - **Reduced** instruction set computer - 减少的、简化的
 
 加速比：是个大于1的数字
 
-![QQ_1742223853193](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1742223853193.png)
+![QQ_1742223853193](./assets/QQ_1742223853193.png)
 
 
 
 ## 3. 存储系统
 
-![QQ_1742224911304](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1742224911304.png)
+![QQ_1742224911304](./assets/QQ_1742224911304.png)
 
 - 寄存器 - 32bit / 64bit
 
@@ -127,7 +127,7 @@ RISC - **Reduced** instruction set computer - 减少的、简化的
 
 **Cache的特点**
 
-![QQ_1742225534056](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1742225534056.png)
+![QQ_1742225534056](./assets/QQ_1742225534056.png)
 
 >  地址映射，由**硬件自动完成** - 重点考点送分题 ！！！
 
@@ -152,7 +152,7 @@ RISC - **Reduced** instruction set computer - 减少的、简化的
 
 cache的命中率 （CPU访问的数据正好在cache中的概率）
 
-![QQ_1742226162059](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1742226162059.png)
+![QQ_1742226162059](./assets/QQ_1742226162059.png)
 
 本质上来说是有漏洞的。因为cache 100%访问了，10%的概率再访问内存。
 但是这个完整版逻辑知道就行，考试用的就是上图中的算法
@@ -164,7 +164,7 @@ cache的命中率 （CPU访问的数据正好在cache中的概率）
 
 ### 磁盘
 
-![QQ_1742226697366](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1742226697366.png)
+![QQ_1742226697366](./assets/QQ_1742226697366.png)
 
 注意，N个圆环，每个圆环被切成假设是8片，那么 - 每一个`局部扇片`就是 一片存储区域，所以一共有 `8N`个扇区
 
@@ -176,7 +176,7 @@ cache的命中率 （CPU访问的数据正好在cache中的概率）
 
 - PS: 因为磁盘可以有Y层，也就是Y个盘面，所以其实存储扇区其实有 `8NY` 个，见下图
 
-![QQ_1742304646483](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1742304646483.png)
+![QQ_1742304646483](./assets/QQ_1742304646483.png)
 
 > 柱面 依旧是 磁道
 
@@ -200,11 +200,11 @@ cache的命中率 （CPU访问的数据正好在cache中的概率）
 - 独立编址方法 - 接口的指令少，功能弱
 - 统一编址方法 - 导致地址空间不连续
 
-![QQ_1742306867288](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1742306867288.png)
+![QQ_1742306867288](./assets/QQ_1742306867288.png)
 
 `计算机 和 外设之间` 的数据交互方式 - 重点
 
-![QQ_1742306958280](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1742306958280.png)
+![QQ_1742306958280](./assets/QQ_1742306958280.png)
 
 最后一句，`CPU响应时间判断节点`很重要
 
@@ -216,7 +216,7 @@ cache的命中率 （CPU访问的数据正好在cache中的概率）
 
 ## 5. 总线
 
-![QQ_1742307335850](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1742307335850.png)
+![QQ_1742307335850](./assets/QQ_1742307335850.png)
 
 硬件层面，接到主板上的线，都属于总线
 
