--- a/文老师/基础/20_1.md
+++ b/文老师/基础/20_1.md
@@ -7,13 +7,13 @@
 
 
 
-![image-20250414203822043](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250414203822043.png)
+![image-20250414203822043](./assets/image-20250414203822043.png)
 
 
 
 ## 1. 软件工程概述（第一版）
 
-![image-20250414204642712](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250414204642712.png)
+![image-20250414204642712](./assets/image-20250414204642712.png)
 
 
 
@@ -21,7 +21,7 @@
 
 ## 2. CMM（CMMI） - 能力成熟度模型
 
-![image-20250414205228313](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250414205228313.png)
+![image-20250414205228313](./assets/image-20250414205228313.png)
 
 关键过程区域倒是不需要记住，左侧五个能力必须记住
 
@@ -29,11 +29,11 @@
 
 ### CMMI
 
-![image-20250414205547926](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250414205547926.png)
+![image-20250414205547926](./assets/image-20250414205547926.png)
 
 第一种 - 阶段式模型是考点，
 
-![image-20250414205632866](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250414205632866.png)
+![image-20250414205632866](./assets/image-20250414205632866.png)
 
 了解即可 - 连续式模型有六级
 
@@ -45,13 +45,13 @@
 
 >  瀑布模型，逐渐被淘汰了，适用于小型项目
 
-![image-20250414210234901](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250414210234901.png)
+![image-20250414210234901](./assets/image-20250414210234901.png)
 
 
 
 >  原型模型 - 解决需求不明确时的场景
 
-![image-20250414210853720](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250414210853720.png)
+![image-20250414210853720](./assets/image-20250414210853720.png)
 
 
 
@@ -59,7 +59,7 @@
 >
 > 考点在于 - 它强调了 `风险分析`!
 
-![image-20250414210442027](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250414210442027.png)
+![image-20250414210442027](./assets/image-20250414210442027.png)
 
 
 
@@ -67,27 +67,27 @@
 >
 > 考点：生命周期和测试方式的一一对应
 
-![image-20250414210755187](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250414210755187.png)
+![image-20250414210755187](./assets/image-20250414210755187.png)
 
 
 
 > 增量模型 - 分批次交付
 
-![image-20250414211013330](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250414211013330.png)
+![image-20250414211013330](./assets/image-20250414211013330.png)
 
 
 
 > 其他模型
 
-![image-20250414211116494](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250414211116494.png)
+![image-20250414211116494](./assets/image-20250414211116494.png)
 
 
 
 ### 敏捷开发模型
 
-![image-20250414215254464](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250414215254464.png)
+![image-20250414215254464](./assets/image-20250414215254464.png)
 
-![image-20250414215632058](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250414215632058.png)
+![image-20250414215632058](./assets/image-20250414215632058.png)
 
 
 
@@ -97,28 +97,28 @@
 >
 > 也是个螺旋迭代的过程
 
-![image-20250414215926502](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250414215926502.png)
+![image-20250414215926502](./assets/image-20250414215926502.png)
 
 
 
 > 四个阶段
 
-![image-20250414220148534](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250414220148534.png)
+![image-20250414220148534](./assets/image-20250414220148534.png)
 
 > 三个特点
 
-![image-20250414220545722](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250414220545722.png)
+![image-20250414220545722](./assets/image-20250414220545722.png)
 
 
 
 ## 4. 逆向工程
 
-![image-20250414222051766](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250414222051766.png)
+![image-20250414222051766](./assets/image-20250414222051766.png)
 
-![image-20250414222229701](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250414222229701.png)
+![image-20250414222229701](./assets/image-20250414222229701.png)
 
 
 
 真题
 
-![image-20250414222424543](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250414222424543.png)
+![image-20250414222424543](./assets/image-20250414222424543.png)
