--- a/文老师/基础/20_3.md
+++ b/文老师/基础/20_3.md
@@ -10,7 +10,7 @@
 
 #### 流程表示工具
 
-![image-20250420230218094](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250420230218094.png)
+![image-20250420230218094](./assets/image-20250420230218094.png)
 
 - IPO - Input、Process、Output
 - N-S 图 - 又称盒图，本身复杂，所以不适合显示复杂程序设计
@@ -20,21 +20,21 @@
 
 #### 业务流程重组BPR - Reengineering
 
-![image-20250420230559706](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250420230559706.png)
+![image-20250420230559706](./assets/image-20250420230559706.png)
 
  #### 业务流程管理BPM - manage
 
-![image-20250420231505957](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250420231505957.png)
+![image-20250420231505957](./assets/image-20250420231505957.png)
 
 
 
 ## 7. 系统设计
 
-![image-20250422062628777](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250422062628777.png)
+![image-20250422062628777](./assets/image-20250422062628777.png)
 
 
 
-![image-20250422062652434](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250422062652434.png)
+![image-20250422062652434](./assets/image-20250422062652434.png)
 
 - 扇入 - 被调用；扇出 - 被其他组件调用
 
@@ -42,9 +42,9 @@
 
 #### 内聚 & 耦合 - 必考
 
-![image-20250422062818689](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250422062818689.png)
+![image-20250422062818689](./assets/image-20250422062818689.png)
 
-![image-20250422062841138](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250422062841138.png)
+![image-20250422062841138](./assets/image-20250422062841138.png)
 
 
 
@@ -52,4 +52,4 @@
 
 ## 8. 人机界面设计
 
-![image-20250422062957825](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250422062957825.png)
+![image-20250422062957825](./assets/image-20250422062957825.png)
