--- a/文老师/基础/3.md
+++ b/文老师/基础/3.md
@@ -6,7 +6,7 @@
 
 
 
-![QQ_1742308516877](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1742308516877.png)
+![QQ_1742308516877](./assets/QQ_1742308516877.png)
 
 
 
@@ -29,7 +29,7 @@
 
 
 
-![QQ_1742308688923](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1742308688923.png)
+![QQ_1742308688923](./assets/QQ_1742308688923.png)
 
 #### 操作系统的功能
 
@@ -39,19 +39,19 @@
 - 设备管理 - 对I/O设备的管理
 - 作业管理 - 对任务、界面等的管理 - 了解即可
 
-![QQ_1742309100872](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1742309100872.png)
+![QQ_1742309100872](./assets/QQ_1742309100872.png)
 
 
 
 #### 操作系统的分类
 
-![QQ_1742309160217](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1742309160217.png)
+![QQ_1742309160217](./assets/QQ_1742309160217.png)
 
 分时操作系统最常见 - CPU 以 10ms 为时间片，切分N份
 
 网络操作系统：客户端/服务器模式 - C/S架构； 对等模式 - P2P（PPP），可以互相当服务器/客户端
 
-![QQ_1742482031923](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1742482031923.png)
+![QQ_1742482031923](./assets/QQ_1742482031923.png)
 
 - 微型化 - 一般就几MB大小
 - 对实时性、可靠性、安全性，要求极高
@@ -64,7 +64,7 @@
 
 ## 2. 进程管理
 
-![QQ_1742482330469](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1742482330469.png)
+![QQ_1742482330469](./assets/QQ_1742482330469.png)
 
 补充： TCB - 线程控制块；FCB - 文件控制块。 - Controller Block
 
@@ -78,7 +78,7 @@
 
 ### 前趋图
 
-![QQ_1742740952587](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1742740952587.png)
+![QQ_1742740952587](./assets/QQ_1742740952587.png)
 
 右图中，ABC需要同时完成，才能进入D
 
@@ -86,7 +86,7 @@
 
 ### 进程资源图
 
-![QQ_1742741151567](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1742741151567.png)
+![QQ_1742741151567](./assets/QQ_1742741151567.png)
 
 了解即可，最近十年都没考过
 
@@ -96,7 +96,7 @@
 
 ## 3. 进程同步与互斥 - 考点
 
-![QQ_1742741769849](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1742741769849.png)
+![QQ_1742741769849](./assets/QQ_1742741769849.png)
 
 - 临界资源 vs 共享资源
 - `临界区` 是 **代码程序**，不是一块空间
@@ -106,7 +106,7 @@
 
 
 
-![QQ_1742819405925](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1742819405925.png)
+![QQ_1742819405925](./assets/QQ_1742819405925.png)
 
 - `P(S)` 操作： 申请资源， -1、-1、-1.  为什么会 `S<0`，因为先 `S=S-1`，再看S的值；N个申请，则为 `0-N` 
 - `V(S)` 操作：释放资源（往里面扔资源）， `S<0`，比如 `-N`, 是因为有N个进程在**等待**资源释放
@@ -114,7 +114,7 @@
 
 
 
-![QQ_1742820068330](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1742820068330.png) 
+![QQ_1742820068330](./assets/QQ_1742820068330.png) 
 
 这是个互斥语句怎么写
 
@@ -126,7 +126,7 @@
 
 >  考察方式一
 
-![QQ_1742821547667](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1742821547667.png)
+![QQ_1742821547667](./assets/QQ_1742821547667.png)
 
 **前趋图每一条线对应一个信号量**，但是没说 `P1 对应S1`，P1连接两条线，所以是对应了`S1 和 S2`
 
@@ -138,7 +138,7 @@ PS： 蒙对了后两个答案，还行，怒拿2分
 
 > 考察方式二
 
-![QQ_1742822254508](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1742822254508.png)
+![QQ_1742822254508](./assets/QQ_1742822254508.png)
 
 会做，但是最后一个题，`5和6的空位看错了`，答案选错了，尴尬...
 
