--- a/文老师/基础/4.md
+++ b/文老师/基础/4.md
@@ -52,7 +52,7 @@
 
 理解一下：每个进程只有R-1个资源，每个进程都死在最后一步，所以`n*(R-1)`，再多给一个资源就可以解除死锁 
 
-![QQ_1741789159875](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1741789159875.png)
+![QQ_1741789159875](./assets/QQ_1741789159875.png)
 
 
 
@@ -64,7 +64,7 @@
 
 - 线程要考虑多并发，所以要加锁
 
-![QQ_1741790147590](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1741790147590.png)
+![QQ_1741790147590](./assets/QQ_1741790147590.png)
 
 
 
@@ -80,7 +80,7 @@
 
    1. 算法：首次适应法、最佳适应法、最差适应法、循环首次适应法
 
-   ![QQ_1741790621973](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1741790621973.png)
+   ![QQ_1741790621973](./assets/QQ_1741790621973.png)
 
 3. 可重定位分区 - 解决碎片问题（扩大碎片）
 
@@ -96,7 +96,7 @@
 
 缺点：增加了系统开销，可能产生抖动
 
-![QQ_1741791761649](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1741791761649.png)
+![QQ_1741791761649](./assets/QQ_1741791761649.png)
 
 页面置换算法
 
