--- a/文老师/基础/6.md
+++ b/文老师/基础/6.md
@@ -12,7 +12,7 @@
 
 
 
-![QQ_1742920599690](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1742920599690.png)
+![QQ_1742920599690](./assets/QQ_1742920599690.png)
 
 
 
@@ -20,17 +20,17 @@
 
 >  我们用到的、主流的数据库，都是`关系模型`，基本没用过其他的。典型特征 - 有表sheet
 
-![QQ_1742998178238](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1742998178238.png)
+![QQ_1742998178238](./assets/QQ_1742998178238.png)
 
 数据库系统DBS（database system）：
 
-![QQ_1742998317165](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1742998317165.png)
+![QQ_1742998317165](./assets/QQ_1742998317165.png)
 
 
 
 ## 2. 三级模式-两级映像（映射） - 重点
 
-![QQ_1742998466799](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1742998466799.png)
+![QQ_1742998466799](./assets/QQ_1742998466799.png)
 
 - 内模式直接和数据库存储模式相关，和物理存储相关
 - 概念模式基本就是和 表sheet 对应
@@ -48,7 +48,7 @@
 
 
 
-![QQ_1743002335805](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1743002335805.png)
+![QQ_1743002335805](./assets/QQ_1743002335805.png)
 
 1. 需求分析  - 产出物：数据流图、数据字典、需求说明书
 2. 概念结构设计 - 产出物：E-R图（实体-联系图）
@@ -59,7 +59,7 @@
 
 ## 4. 数据模型
 
-![QQ_1743002799702](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1743002799702.png)
+![QQ_1743002799702](./assets/QQ_1743002799702.png)
 
 - 四种模型，重点是关系模型和概念模型
 
@@ -71,24 +71,24 @@
 
 ### E-R图（Entity-Relationship Diagram）： - **需要记住**
 
-![QQ_1743003332221](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1743003332221.png)
+![QQ_1743003332221](./assets/QQ_1743003332221.png)
 
 - 图中，数字`（1、*）`表示联系之间的类型：`1对1`、`1对多`、`多对多`；
 
 - 长方形表示实体；加了两道杠（比如经理）表示**弱实体**，弱实体和强实体连接，用`圆圈o` 连接
 
-![QQ_1743003475391](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1743003475391.png)
+![QQ_1743003475391](./assets/QQ_1743003475391.png)
 
 - 派生属性：可以由其他属性计算得来的
 - 码（key），又叫做 键，唯一标识。 重点！
 
 
 
-![QQ_1743003584609](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1743003584609.png)
+![QQ_1743003584609](./assets/QQ_1743003584609.png)
 
 ### 关系模型
 
-![QQ_1743003795264](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1743003795264.png)
+![QQ_1743003795264](./assets/QQ_1743003795264.png)
 
 - 行，叫元祖、也叫水平记录
 - 列，就叫属性
@@ -99,7 +99,7 @@
 
 > E-R图 并不是我们真正需要的，它存在的目的是为了 转换为关系模型
 
-![QQ_1743004062762](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1743004062762.png)
+![QQ_1743004062762](./assets/QQ_1743004062762.png)
 
 - 上图换个说法，也就是 关系键（比如id），放在哪个表里
 - 1:N 和 M:N 是最常考的；1:N中（比如店铺和员工），多（员工）里面增加一个id（店铺id）指向1； M:N中（比如商品和属性），需要第三个表，key为`M_N`，维护两者关系
