--- a/文老师/基础/9.md
+++ b/文老师/基础/9.md
@@ -9,7 +9,7 @@
 
 ## 11. 数据库安全
 
-![image-20250330232222968](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250330232222968.png)
+![image-20250330232222968](./assets/image-20250330232222968.png)
 
 图是歪的，强迫症发作了，好气...
 
@@ -26,7 +26,7 @@
 
 数据库是否在运行，运行中就叫动态、未启动就叫静态
 
-![image-20250330233217228](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250330233217228.png)
+![image-20250330233217228](./assets/image-20250330233217228.png)
 
 - 完全备份、差量备份、增量备份，指的是备份的体量的大小
 - 差量备份 - 备份 `上次完全备份` 之后的 变化数据；增量备份 - 备份 `任意上次备份` 之后的 变化数据
@@ -37,7 +37,7 @@
 
 > 相反的 - 集中式数据库（比如测试环境全都在 公司的小机房 里面）
 
-![image-20250330233528876](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250330233528876.png)
+![image-20250330233528876](./assets/image-20250330233528876.png)
 
 - 只有一个 `全局的DBMS`（database manage system），每个地方都有自己的 `局部DBMS`
 
@@ -49,13 +49,13 @@
 
 >  收集那么全面的大量的数据即可，是为了 用于大数据的决策
 
-![image-20250330234206298](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250330234206298.png)
+![image-20250330234206298](./assets/image-20250330234206298.png)
 
 - 不同的数据来源的数据库都是`异构`的，所以 集成 的 时候必须`消除 不一致性`
 
 
 
-![image-20250330234451009](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250330234451009.png)
+![image-20250330234451009](./assets/image-20250330234451009.png)
 
 - 四个层次 - **重点，需要记住**
   - 数据来源
@@ -67,7 +67,7 @@
 
 #### 商业智能 BI - business intelligence
 
-![image-20250331210805431](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250331210805431.png)
+![image-20250331210805431](./assets/image-20250331210805431.png)
 
 
 
@@ -77,7 +77,7 @@
 
 表拆分的太细，那么至少影响查询效率，所以反规范化，主要目的就是为了 **提升查询效率**
 
-![image-20250331211324648](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250331211324648.png)
+![image-20250331211324648](./assets/image-20250331211324648.png)
 
 - 派生列 - 是一个计算的列，并非真正生成的。所以直接把派生列变成真实计算的结果，不用每次都计算了
 
@@ -91,11 +91,11 @@
 - PB - 1024TB
 - 集群平台 - 多个平台（多个服务器才能存的下）； 高端服务器 - 就是普通服务器
 
-![image-20250331211806080](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250331211806080.png)
+![image-20250331211806080](./assets/image-20250331211806080.png)
 
 >  一道真题
 
-![image-20250331212056604](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250331212056604.png)
+![image-20250331212056604](./assets/image-20250331212056604.png)
 
 - 日志文件记录操作，不记录数据；数据文件记录数据
 
@@ -107,17 +107,17 @@
 
 > 考试不需要真的编程，能看懂语法就行
 
-![image-20250331212723629](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250331212723629.png)
+![image-20250331212723629](./assets/image-20250331212723629.png)
 
-![image-20250331213137369](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250331213137369.png)
+![image-20250331213137369](./assets/image-20250331213137369.png)
 
-![image-20250331214030795](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250331214030795.png)
+![image-20250331214030795](./assets/image-20250331214030795.png)
 
 - group by 分组，没必要后面非要跟have ！
 
 
 
-![image-20250331222151221](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250331222151221.png)
+![image-20250331222151221](./assets/image-20250331222151221.png)
 
 - 自然连接就是自然连接，派、西格玛不认识 就怪自己
 
