--- a/文老师/论文/1.md
+++ b/文老师/论文/1.md
@@ -1,10 +1,7 @@
 # 论文写作
 
 
-
 > 2600字 = 300字摘要 + 500字背景 + 1500字正文 + 300字总结
-
-
 
 
 
@@ -12,24 +9,19 @@
 
 ### 大纲
 
-![image-20250518203716684](/Users/wplay/2025/senior_software_infra_docs/文老师/论文/assets//image-20250518203716684.png)
-
-
-
+![image-20250518203716684](./assets/image-20250518203716684.png)
 
 
 ### 写作原则
 
-![image-20250518203804322](/Users/wplay/2025/senior_software_infra_docs/文老师/论文/assets//image-20250518203804322.png)
-
+![image-20250518203804322](./assets/image-20250518203804322.png)
 
 
 ### 评分标准
 
-![image-20250518203846386](/Users/wplay/2025/senior_software_infra_docs/文老师/论文/assets//image-20250518203846386.png)
+![image-20250518203846386](./assets/image-20250518203846386.png)
 
-![image-20250518203904372](/Users/wplay/2025/senior_software_infra_docs/文老师/论文/assets//image-20250518203904372.png)
-
+![image-20250518203904372](./assets/image-20250518203904372.png)
 
 
 ## 二、细节分析
@@ -40,52 +32,43 @@
 
 > 选择项目 - 时间较新、中大型商业项目、研发周期大于10个月、已交付验收
 
-![image-20250518204157066](/Users/wplay/2025/senior_software_infra_docs/文老师/论文/assets//image-20250518204157066.png)
-
+![image-20250518204157066](./assets/image-20250518204157066.png)
 
 
 #### 论文基本框架
 
-![image-20250518204318170](/Users/wplay/2025/senior_software_infra_docs/文老师/论文/assets//image-20250518204318170.png)
+![image-20250518204318170](./assets/image-20250518204318170.png)
 
 岗位 - 系统架构设计师或者分析师！
 
 
-
 #### 理论素材的准备
 
-![image-20250518204447715](/Users/wplay/2025/senior_software_infra_docs/文老师/论文/assets//image-20250518204447715.png)
-
+![image-20250518204447715](./assets/image-20250518204447715.png)
 
 
 ### 2. 摘要
 
-![image-20250518204624186](/Users/wplay/2025/senior_software_infra_docs/文老师/论文/assets//image-20250518204624186.png)
-
+![image-20250518204624186](./assets/image-20250518204624186.png)
 
 
 ### 3. 背景介绍
 
-![image-20250518204732137](/Users/wplay/2025/senior_software_infra_docs/文老师/论文/assets//image-20250518204732137.png)
-
+![image-20250518204732137](./assets/image-20250518204732137.png)
 
 
 ### 4. 正文
 
-![image-20250518204820487](/Users/wplay/2025/senior_software_infra_docs/文老师/论文/assets//image-20250518204820487.png)
-
+![image-20250518204820487](./assets/image-20250518204820487.png)
 
 
 ## 5. 结尾
 
-![image-20250518204853350](/Users/wplay/2025/senior_software_infra_docs/文老师/论文/assets//image-20250518204853350.png)
+![image-20250518204853350](./assets/image-20250518204853350.png)
 
 不足之处 — 一两个就够了
 
 
-
-
-
 ## 三、精华主题总览（非押题）
 
-![image-20250518211837347](/Users/wplay/2025/senior_software_infra_docs/文老师/论文/assets//image-20250518211837347.png)
+![image-20250518211837347](./assets/image-20250518211837347.png)
