--- a/文老师/基础/14.md
+++ b/文老师/基础/14.md
@@ -2,15 +2,15 @@
 
 > 补充知识，学习了解即可
 
-![image-20250404233559237](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250404233559237.png)
+![image-20250404233559237](./assets/image-20250404233559237.png)
 
 
 
 ## 1. 计算机语言
 
-![image-20250405213130918](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250405213130918.png)
+![image-20250405213130918](./assets/image-20250405213130918.png)
 
-![image-20250405213547738](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250405213547738.png)
+![image-20250405213547738](./assets/image-20250405213547738.png)
 
 
 
@@ -26,11 +26,11 @@
 
 ## 2. 多媒体
 
-![image-20250405231716013](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250405231716013.png)
+![image-20250405231716013](./assets/image-20250405231716013.png)
 
-![image-20250405233506431](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250405233506431.png)
+![image-20250405233506431](./assets/image-20250405233506431.png)
 
-![image-20250405234005226](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250405234005226.png)
+![image-20250405234005226](./assets/image-20250405234005226.png)
 
 - 视频编码技术 - 视频和音频，都是模拟信号，需要转换成 数字信号
 
@@ -38,9 +38,9 @@
 
 ### 虚拟现实VR / 增强现实AR
 
-![image-20250405234147768](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250405234147768.png)
+![image-20250405234147768](./assets/image-20250405234147768.png)
 
-![image-20250405234604285](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250405234604285.png)
+![image-20250405234604285](./assets/image-20250405234604285.png)
 
 
 
@@ -48,13 +48,13 @@
 
 ## 3. 系统工程
 
-![image-20250407220705861](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250407220705861.png)
+![image-20250407220705861](./assets/image-20250407220705861.png)
 
-![image-20250407220937771](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250407220937771.png)
+![image-20250407220937771](./assets/image-20250407220937771.png)
 
-![image-20250407221742937](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250407221742937.png)
+![image-20250407221742937](./assets/image-20250407221742937.png)
 
-![image-20250407222255199](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250407222255199.png)
+![image-20250407222255199](./assets/image-20250407222255199.png)
 
 - 综合集成法是国人提出的，所以，多留意一点这个
 
@@ -62,10 +62,10 @@
 
 ### 系统工程的生命周期
 
-![image-20250407222557802](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250407222557802.png)
+![image-20250407222557802](./assets/image-20250407222557802.png)
 
-![image-20250407222630770](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250407222630770.png)
+![image-20250407222630770](./assets/image-20250407222630770.png)
 
 
 
-![image-20250407223426647](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250407223426647.png)
+![image-20250407223426647](./assets/image-20250407223426647.png)
