--- a/文老师/基础/16.md
+++ b/文老师/基础/16.md
@@ -1,6 +1,6 @@
 # 8. 信息系统基础知识
 
-![image-20250409070830076](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250409070830076.png)
+![image-20250409070830076](./assets/image-20250409070830076.png)
 
 
 
@@ -13,13 +13,13 @@
 
 ## 1. 信息系统概述
 
-![image-20250410204457850](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250410204457850.png)
+![image-20250410204457850](./assets/image-20250410204457850.png)
 
 
 
 ### 分类
 
-![image-20250410211155889](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250410211155889.png)
+![image-20250410211155889](./assets/image-20250410211155889.png)
 
 - 中英文对照要记住
   - 业余（数据）处理系统 TPS/ DPS  - 局部
@@ -34,7 +34,7 @@
 
 ### 企业使用的具体信息化系统
 
-![image-20250410211502825](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250410211502825.png)
+![image-20250410211502825](./assets/image-20250410211502825.png)
 
 - WMS - 仓储管理系统； MES - 制造过程管理系统；PDM - 产品数据管理
 - 还有CRM - 客户关系管理；SCM - 供应链管理
@@ -45,9 +45,9 @@
 
 ## 2. 生命周期
 
-![image-20250410212956349](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250410212956349.png)
+![image-20250410212956349](./assets/image-20250410212956349.png)
 
-![image-20250410213529213](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250410213529213.png)
+![image-20250410213529213](./assets/image-20250410213529213.png)
 
 - 新版生命周期：产生 -> 开发 -> 运行 -> 消亡
 - 产生阶段就会有 `需求分析报告`
@@ -70,13 +70,13 @@
 - 面向对象 - OO - 最主流
 - 面向服务 - SO
 
-![image-20250410214337051](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250410214337051.png)
+![image-20250410214337051](./assets/image-20250410214337051.png)
 
-![image-20250410214621350](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250410214621350.png)
+![image-20250410214621350](./assets/image-20250410214621350.png)
 
-![image-20250410215131013](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250410215131013.png)
+![image-20250410215131013](./assets/image-20250410215131013.png)
 
-![image-20250410215253750](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250410215253750.png)
+![image-20250410215253750](./assets/image-20250410215253750.png)
 
 - 为什么用原型 - 许多甲方看不懂文档
 - 面对对象，是从现实和实际应用的角度 设计的
@@ -89,21 +89,21 @@
 
 ### 业务处理系统TPS - 初级系统
 
-![image-20250410215608091](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250410215608091.png)
+![image-20250410215608091](./assets/image-20250410215608091.png)
 
-![image-20250410215803609](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250410215803609.png)
+![image-20250410215803609](./assets/image-20250410215803609.png)
 
 
 
 ### 管理信息系统MIS
 
-![image-20250410220851492](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250410220851492.png)
+![image-20250410220851492](./assets/image-20250410220851492.png)
 
 
 
 > 根据上面的示例演化的组成，了解即可
 
-![image-20250410221043559](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250410221043559.png)
+![image-20250410221043559](./assets/image-20250410221043559.png)
 
 
 
@@ -111,7 +111,7 @@
 
 ### 决策支持系统DSS
 
-![image-20250410221555552](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250410221555552.png)
+![image-20250410221555552](./assets/image-20250410221555552.png)
 
 两库结构 - 数据库 + 模型库
 
@@ -119,13 +119,13 @@
 
 > 作用和特点，看一下就行了
 
-![image-20250410221706109](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250410221706109.png)
+![image-20250410221706109](./assets/image-20250410221706109.png)
 
 
 
 #### DSS组成
 
-![image-20250410222120259](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250410222120259.png)
+![image-20250410222120259](./assets/image-20250410222120259.png)
 
 - 聚类 - 天然就有的；分类 - 人为划分的
 
