--- a/文老师/基础/17.md
+++ b/文老师/基础/17.md
@@ -11,9 +11,9 @@
 
 ### 专家系统ES
 
-![image-20250413221142473](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250413221142473.png)
+![image-20250413221142473](./assets/image-20250413221142473.png)
 
-![image-20250413221956367](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250413221956367.png)
+![image-20250413221956367](./assets/image-20250413221956367.png)
 
 
 
@@ -21,29 +21,29 @@
 
 ### 办公自动化系统 OAS
 
-![image-20250413222114123](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250413222114123.png)
+![image-20250413222114123](./assets/image-20250413222114123.png)
 
 
 
 ### 企业资源规划 ERP
 
-![image-20250413224612897](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250413224612897.png)
+![image-20250413224612897](./assets/image-20250413224612897.png)
 
 
 
 #### 结构
 
-![image-20250413224821332](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250413224821332.png)
+![image-20250413224821332](./assets/image-20250413224821332.png)
 
 
 
 >  下张图是五个层次； MRP - 物料资源计划
 
-![image-20250413225139287](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250413225139287.png)
+![image-20250413225139287](./assets/image-20250413225139287.png)
 
 > 四个模块
 
-![image-20250413225321762](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250413225321762.png)
+![image-20250413225321762](./assets/image-20250413225321762.png)
 
 
 
@@ -53,7 +53,7 @@
 
 ### 政府信息化和电子商务
 
-![image-20250413230200705](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250413230200705.png)
+![image-20250413230200705](./assets/image-20250413230200705.png)
 
 
 
@@ -61,6 +61,6 @@
 
 ### 企业信息化和电子商务
 
-![image-20250413230127547](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250413230127547.png)
+![image-20250413230127547](./assets/image-20250413230127547.png)
 
-![image-20250413230458906](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250413230458906.png)
+![image-20250413230458906](./assets/image-20250413230458906.png)
