--- a/文老师/基础/23_1.md
+++ b/文老师/基础/23_1.md
@@ -5,7 +5,7 @@
 
 
 
-![image-20250424223651991](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250424223651991.png)
+![image-20250424223651991](./assets/image-20250424223651991.png)
 
 总目录：
 
