--- a/文老师/基础/7.md
+++ b/文老师/基础/7.md
@@ -16,7 +16,7 @@
 
 ### 三种基本运算 - 并、交、差 （符号得记住）；差要记住主体是谁 - 了解即可
 
-![QQ_1743087884839](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1743087884839.png)
+![QQ_1743087884839](./assets/QQ_1743087884839.png)
 
 ### 笛卡尔积 - 考点
 
@@ -24,7 +24,7 @@
 - 重复的列也会显示，所以列的总数量是 `S1 + S2`
 - 投影的符号是 希腊字母`pi`，选择的符号是 希腊字母 `sigma`  
 
-![QQ_1743088210052](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1743088210052.png)
+![QQ_1743088210052](./assets/QQ_1743088210052.png)
 
 
 
@@ -34,11 +34,11 @@
 - 要求相交属性相同且该属性内的值也一样
 - 有点像是取 指定点的 交集
 
-![QQ_1743088712378](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1743088712378.png)
+![QQ_1743088712378](./assets/QQ_1743088712378.png)
 
 > 主要考点还有：笛卡尔积 和 自然连接 的互相转化！下面是一个考题
 
-![QQ_1743089501370](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1743089501370.png)
+![QQ_1743089501370](./assets/QQ_1743089501370.png)
 
 
 
@@ -52,7 +52,7 @@
 
 ## 6. 函数依赖
 
-![QQ_1743089562567](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1743089562567.png)
+![QQ_1743089562567](./assets/QQ_1743089562567.png)
 
 依赖的写法： `A -> B` ，读作 `A决定B` ，表示 `B依赖于A`
 
@@ -60,7 +60,7 @@
 
 > 公理系统 - 理解、简单记忆即可
 
-![QQ_1743089896735](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1743089896735.png)
+![QQ_1743089896735](./assets/QQ_1743089896735.png)
 
 - 自反律 - U是表的属性，F是所有的依赖关系的集合，所以 `X -> F` 成立，也就叫做 `为F所(逻辑)蕴含`
 
@@ -74,7 +74,7 @@
 
 键，也称作为 码，所以 `主键=主码`，两种称呼都可以
 
-![QQ_1743090438853](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1743090438853.png)
+![QQ_1743090438853](./assets/QQ_1743090438853.png)
 
 - 学号是唯一标识，身份证也是唯一标识。所以（学号，身份证，姓名，年龄） 这种组合，只要有学号或者身份证之一，就都是 超键
 - 去掉冗余， （学号，身份证） 就是候选键
@@ -96,13 +96,13 @@
 
 
 
-![QQ_1743091152018](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1743091152018.png)
+![QQ_1743091152018](./assets/QQ_1743091152018.png)
 
 - 每个属性都需要是简单属性
 - 做 规范化 的时候，首先要求出 `主键`， 主键可能是复合主键，尤其是只复合第一范式的，大概率需要两个属性合成一个主键
 - 如下图，属于`第一范式`，主键是 `学生号+课程号`
 
-![image-20250330142140435](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250330142140435.png)
+![image-20250330142140435](./assets/image-20250330142140435.png)
 
 
 
@@ -111,12 +111,12 @@
 - 主键是多个属性的时候，才会存在`部分函数依赖`；比如，上图中，`学号`单独也可能决定学生姓名
 - 所以`单属性主键`，**必然是第二范式**，所以**消除部分依赖**，也就是第二范式的概念如下图
 
-![image-20250330145254226](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250330145254226.png)
+![image-20250330145254226](./assets/image-20250330145254226.png)
 
 - **传递依赖**： 学号决定了所在系；系号决定了系主任。所以学号 -传递依赖-> 得到系主任
 - 需要**解除传递依赖**，就是第三范式，如下图
 
-![image-20250330145542664](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250330145542664.png)
+![image-20250330145542664](./assets/image-20250330145542664.png)
 
 
 
@@ -124,10 +124,10 @@
 - 第三范式**消除了 非主属性 的传递依赖**
 - `BC范式` 消除了 **主属性**对于码的部分函数依赖和传递依赖 - 考的少，稍微了解一些就好
 
-![image-20250330150143797](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250330150143797.png)
+![image-20250330150143797](./assets/image-20250330150143797.png)
 
 - 主键是候选键任选其一，所以 S、T、J 都是主属性，上图没有 `非主属性`，所以天然达到了 **第三范式**
 
 
 
-![image-20250330152245673](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250330152245673.png)
+![image-20250330152245673](./assets/image-20250330152245673.png)
